--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Registro</title>
-    <link rel="stylesheet" href="/static/estilo.css">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
@@ -15,6 +15,7 @@
                 <li><a href="#">Acerca de</a></li>
                 <li><a href="#">Servicios</a></li>
                 <li><a href="#">Contacto</a></li>
+
             </ul>
         </nav>
     </header>
@@ -22,25 +23,28 @@
     <main>
         
         <section class="panel">
-            <h2>Consultar Informacion de los pokemon</h2>
-            
-            <input type="submit"></input>
 
-            <p>Info</p>
+                <h1>Consultar pokemon</h1>
+    <form id="registroForm" class="formularioRegistro">
+        <label for="nombre">Nombre de pokemon o numero:</label>
+        <input type="text" id="nombre" name="nombre" required>
+        <button type="submit">Consultar</button>
+    </form>
+
         </section>
 
         <!-- Panel 2: Tabla para mostrar datos -->
         <section class="panel">
-            <h2>Participantes Registrados</h2>
+            <h2>Informacion del pokemon</h2>
             <table id="tablaRegistros">
                 <thead>
                     <tr>
+                        <th>No. pokedex</th>
                         <th>Nombre</th>
-                        <th>Apellidos</th>
-                        <th>Correo Electrónico</th>
-                        <th>Nickname</th>
-                        <th>Juego</th>
-                        <th>Acciones</th>
+                        <th>Habilidad</th>
+                        <th>estadistica base</th>
+                        <th>Evolucion</th>
+                       
                     </tr>
                 </thead>
                 <tbody>
@@ -52,6 +56,7 @@
         <section class="panel">
             <h1>ola</h1>
         </section>
+
     </main>
 
     <footer>
@@ -59,6 +64,6 @@
     </footer>
 
     <!-- Incluir el archivo JavaScript externo -->
-    <script src="js/registro.js"></script>
+    <script src="registro.js"></script>
 </body>
 </html>
